--- a/index.html
+++ b/index.html
@@ -140,17 +140,19 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <h5 class="text-light">Não perca nada</h5>
-                    <span class="subtitle">Insira aqui o seu completo e e-mail e receba gratuitamente todas as atualizações do nosso blog!</span>
+                    <h5 class="text-light">Não perca nada!</h5>
+                    <span class="subtitle">Insira aqui o seu nome completo e-mail e receba gratuitamente todas as atualizações do nosso blog!</span>
                     <div class="search-footer d-flex align-items-center">
-                        <input type="text" placeholder="Assine nossa newsletter">
-                        <input type="submit" value="ASSINAR">
+                        <form name="news-footer" method="POST" data-netlify="true">
+                            <input type="email" name="email" placeholder="Assine nossa newsletter">
+                            <input type="submit" value="ASSINAR">
+                        </form>         
                     </div>
                 </div>
                 <div class="offset-md-1 col-md-2">
                     <h5 class="text-light">Redes Sociais</h5>
                     <a href="https://www.instagram.com/proximosemestre/" target="_blank"><img src="img/instagram.png" alt="Logo Instagram"></a>
-                    <a href="#"><img src="img/twitter.png" alt="Logo twitter"></a>
+                    <a href="https://twitter.com/ProximoSemestr" target="_blank"><img src="img/twitter.png" alt="Logo twitter"></a>
                 </div>
             </div>
         </div>
