new - primeiros posts do blog

--- a/index.html
+++ b/index.html
@@ -81,27 +81,24 @@
     <!-- News -->
     <div class="container news d-flex">
         <div class="card mr-5">
-            <img class="card-img" src="img/Screen Shot 2019-06-30 at 17.44.56.png" alt="Tumblr noticias">
+            <img class="card-img" src="img/dicas para memorizar matéria.jpg" alt="Tumblr noticias">
             <div class="card-body">
-                <h5 class="card-title font-weight-bold">Novo FIES juro zero: Tem para todos?</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur 
-                        adipiscing elit. Duis a convallis neque, a 
-                        venenatis tellus. In euismod lacus sed massa 
-                        sollicitudin, ut tincidunt massa pretium.</p>
-                <span class="font-weight-bold">Larissa Ferreira</span>
-                <a href="post.html" class="more-news">mais</a>
+                <h5 class="card-title font-weight-bold">3 dicas para memorizar a matéria da prova</h5>
+                <p class="card-text">Uma das maiores dificuldades dos estudantes é conseguir memorizar 
+                    toda a matéria ou pelo menos a maior parte dela antes de realizar uma prova. 
+                    Isso porque sabemos que, muitas vezes, a matéria é grande e o tempo é curto. Por isso, 
+                    listamos algumas dicas para facilitar esse processo.</p>
+                <span class="font-weight-bold">Marcela Carneiro</span>
+                <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html" class="more-news">mais</a>
             </div>
         </div>
         <div class="card mr-5">
-            <img class="card-img" src="img/Screen Shot 2019-06-30 at 17.44.56.png" alt="Tumblr noticias">
+            <img class="card-img" src="img/como conciliar trabalho e estudos.jpg" alt="Tumblr noticias">
             <div class="card-body">
-                <h5 class="card-title font-weight-bold">Novo FIES juro zero: Tem para todos?</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur 
-                        adipiscing elit. Duis a convallis neque, a 
-                        venenatis tellus. In euismod lacus sed massa 
-                        sollicitudin, ut tincidunt massa pretium.</p>
-                <span class="font-weight-bold">Larissa Ferreira</span>
-                <a href="post.html" class="more-news">mais</a>
+                <h5 class="card-title font-weight-bold">Dicas práticas para conciliar estudo e trabalho</h5>
+                <p class="card-text">Conciliar estudos e trabalho não é exatamente a coisa mais simples de se fazer. Por isso, separamos algumas dicas para deixar a sua rotina um pouco mais fácil!</p>
+                <span class="font-weight-bold">Esther Luísa Oliveira</span>
+                <a href="dicas-praticas-para-conciliar-uma-rotina-de-estudos-e-trabalho.html" class="more-news">mais</a>
             </div>
         </div>
         <!-- Card newsletter -->
@@ -133,13 +130,13 @@
     <footer class="container-fluid bg-rodape">
         <!-- <hr/> -->
         <div class="container py-5">
-            <div class="row  align-items-center">
-                <div class="col-md-3">
-                    <img src="img/logoBranca.png" alt="Logo Próximo Semestre">
-                </div>
-            </div>
             <div class="row">
-                <div class="offset-md-3 col-md-2">
+                <div class="col-md-3">
+                    <div class="col-md-3">
+                        <img src="img/logoBranca.png" alt="Logo Próximo Semestre">
+                    </div>
+                </div>
+                <div class="col-md-2">
                     <h5 class="text-light align-midle">Categorias</h5>
                     <ul class="text-light p-0">
                         <li class="text-light"><a href="#" class="text-light">Dicas de Estudo</a></li>
@@ -153,15 +150,16 @@
                     <span class="subtitle">Insira aqui o seu nome completo e-mail e receba gratuitamente todas as atualizações do nosso blog!</span>
                     <div class="search-footer d-flex align-items-center">
                         <form name="news-footer" method="POST" data-netlify="true">
-                            <input type="email" name="email" placeholder="Assine nossa newsletter">
-                            <input type="submit" value="ASSINAR">
+                            <input type="text" class="w-100"  name="nome" placeholder="Nome completo" required>
+                            <input type="email" class="w-100" name="email" placeholder="Seu e-mail" required>
+                            <input type="submit" class="w-100" value="ASSINAR">
                         </form>         
                     </div>
                 </div>
                 <div class="offset-md-1 col-md-2">
                     <h5 class="text-light">Redes Sociais</h5>
-                    <a href="https://www.instagram.com/proximosemestre/" target="_blank"><img src="img/instagram.png" alt="Logo Instagram"></a>
-                    <a href="https://twitter.com/ProximoSemestr" target="_blank"><img src="img/twitter.png" alt="Logo twitter"></a>
+                    <a href="https://www.instagram.com/proximosemestre/" target="_blank"><img src="img/instagram.png" alt="Logo Instagram" style="width: 25px; height: auto;"></a>
+                    <a href="https://twitter.com/ProximoSemestr" target="_blank"><img src="img/twitter.png" alt="Logo twitter" style="width: 25px; height: auto;"></a>
                 </div>
             </div>
         </div>
