--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <form name="newsLateral" action="POST" data-netlify="true">
                             <input name="nome" class="w-100" type="text" placeholder="Nome completo" required>
                             <input name="email" class="w-100" type="email" placeholder="E-mail" required>
-                            <button type="submit" onclick="downloadMaterial();">EU QUERO!</button>
+                            <button type="submit" onsubmit="downloadMaterial();">EU QUERO!</button>
                         </form>
                     </div>
                 </div>
