fix - retirado newsletter do rodape

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <li class="text-light"><a href="#" class="text-light">ENEM 2019</a></li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <!-- <div class="col-md-4">
                     <h5 class="text-light">Não perca nada!</h5>
                     <span class="subtitle">Insira aqui o seu nome completo e-mail e receba gratuitamente todas as atualizações do nosso blog!</span>
                     <div class="search-footer d-flex align-items-center">
@@ -164,8 +164,8 @@
                             <input type="submit" class="w-100" value="ASSINAR">
                         </form>         
                     </div>
-                </div>
-                <div class="offset-md-1 col-md-2">
+                </div> -->
+                <div class="offset-md-5 col-md-2">
                     <h5 class="text-light">Redes Sociais</h5>
                     <a href="https://www.instagram.com/proximosemestre/" target="_blank"><img src="img/instagram.png" alt="Logo Instagram" style="width: 25px; height: auto;"></a>
                     <a href="https://twitter.com/ProximoSemestr" target="_blank"><img src="img/twitter.png" alt="Logo twitter" style="width: 25px; height: auto;"></a>
