new - adicionado meta description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Blog com dicas e conteúdos para planejamento e otimização dos estudos que irão te ajudar a seguir para o próximo semestre." />
+    <meta name="robots" content="index, follow">
     <title>Próximo Semestre</title>
     <!-- Css bootstrap -->
     <link rel="stylesheet" href="node_modules/bootstrap/compiler/bootstrap.css">
