fix- arrumando bug do download de arquivos

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <form name="newsLateral" action="POST" data-netlify="true">
                             <input name="nome" class="w-100" type="text" placeholder="Nome completo" required>
                             <input name="email" class="w-100" type="email" placeholder="E-mail" required>
-                            <button type="submit" onsubmit="downloadMaterial();">EU QUERO!</button>
+                            <button type="submit" onclick="downloadMaterial();">EU QUERO!</button>
                         </form>
                     </div>
                 </div>
@@ -184,8 +184,10 @@
             if (newsLateral.nome.value == "" || newsLateral.email.value == "") {
                 alert("Campos obrigatórios faltando!");
             } else {
+                // console.log("entrou");
                 return window.open("http://encurtador.com.br/gBCEU");
             }
+            
         }
     </script>
 </body>
