fix - novo link de download

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 alert("Campos obrigatórios faltando!");
             } else {
                 // console.log("entrou");
-                return window.open("http://encurtador.com.br/gBCEU");
+                return window.open("https://doc-0s-98-docs.googleusercontent.com/docs/securesc/98c4bll9p8p89qd75h6vu5js6fv4o9p0/5reaa3q480s339rpsiuc0n40h11fn9da/1562090400000/01264953963501613896/01159750607728277384/1gkH0oSicyclxbzd53x5-s0RWVfHrL6Wu?e=download");
             }
             
         }
