fix - novo download

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 alert("Campos obrigatórios faltando!");
             } else {
                 // console.log("entrou");
-                return window.open("https://doc-0s-5g-docs.googleusercontent.com/docs/securesc/98c4bll9p8p89qd75h6vu5js6fv4o9p0/3o1ab3283h351rttjk2biat794l430qd/1562097600000/01159750607728277384/01159750607728277384/1X0UbZ4bZ6kB2ut5yQ4QPEkvLEU6Jf58K?e=download");
+                return window.open("planejamento.xls");
             }
             
         }
