fix- solucao final para o download do material rico

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 alert("Campos obrigatórios faltando!");
             } else {
                 // console.log("entrou");
-                return window.open("planejamento.xls");
+                return window.open("http://download.designprisma.com.br/planejamento.xlsx");
             }
             
         }
