new - pagina de agradecimento pelo download

--- a/post.html
+++ b/post.html
@@ -38,36 +38,46 @@
             </nav>
         </header>
     </div>
-        <!-- Footer -->
+    <div class="container d-flex justify-content-center">
+        <div class="row">
+                <h1 style="margin-top: 200px; margin-bottom: 200px;">OBRIGADO PELO DOWNLOAD!</h1>
+        </div>
+    </div>
+    
+    <!-- Footer -->
     <footer class="container-fluid bg-rodape">
         <!-- <hr/> -->
         <div class="container py-5">
-            <div class="row  align-items-center">
-                <div class="col-md-3">
-                    <img src="img/logoBranca.png" alt="Logo Próximo Semestre">
-                </div>
-            </div>
             <div class="row">
-                <div class="offset-md-3 col-md-2">
-                    <h5 class="text-light align-midle">Categorias</h5>
-                    <ul class="text-light p-0">
-                        <li class="text-light"><a href="#" class="text-light">Educação</a></li>
-                        <li class="text-light"><a href="#" class="text-light">Aprenda a Estudar</a></li>
-                        <li class="text-light"><a href="#" class="text-light">Enpoderamento</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <h5 class="text-light">Não perca nada</h5>
-                    <span class="subtitle">Insira aqui o seu completo e e-mail e receba gratuitamente todas as atualizações do nosso blog!</span>
-                    <div class="search-footer d-flex align-items-center">
-                        <input type="text" placeholder="Assine nossa newsletter">
-                        <input type="submit" value="ASSINAR">
+                <div class="col-md-3">
+                    <div class="col-md-3">
+                        <img src="img/logoBranca.png" alt="Logo Próximo Semestre">
                     </div>
                 </div>
-                <div class="offset-md-1 col-md-2">
+                <div class="col-md-2">
+                    <h5 class="text-light align-midle">Categorias</h5>
+                    <ul class="text-light p-0">
+                        <li class="text-light"><a href="#" class="text-light">Dicas de Estudo</a></li>
+                        <li class="text-light"><a href="#" class="text-light">Carreira</a></li>
+                        <li class="text-light"><a href="#" class="text-light">Crédito Estudantil</a></li>
+                        <li class="text-light"><a href="#" class="text-light">ENEM 2019</a></li>
+                    </ul>
+                </div>
+                <!-- <div class="col-md-4">
+                    <h5 class="text-light">Não perca nada!</h5>
+                    <span class="subtitle">Insira aqui o seu nome completo e-mail e receba gratuitamente todas as atualizações do nosso blog!</span>
+                    <div class="search-footer d-flex align-items-center">
+                        <form name="news-footer" method="POST" data-netlify="true">
+                            <input type="text" class="w-100"  name="nome" placeholder="Nome completo" required>
+                            <input type="email" class="w-100" name="email" placeholder="Seu e-mail" required>
+                            <input type="submit" class="w-100" value="ASSINAR">
+                        </form>         
+                    </div>
+                </div> -->
+                <div class="offset-md-5 col-md-2">
                     <h5 class="text-light">Redes Sociais</h5>
-                    <a href="#"><img src="img/instagram.png" alt="Logo Instagram"></a>
-                    <a href="#"><img src="img/twitter.png" alt="Logo twitter"></a>
+                    <a href="https://www.instagram.com/proximosemestre/" target="_blank"><img src="img/instagram.png" alt="Logo Instagram" style="width: 25px; height: auto;"></a>
+                    <a href="https://twitter.com/ProximoSemestr" target="_blank"><img src="img/twitter.png" alt="Logo twitter" style="width: 25px; height: auto;"></a>
                 </div>
             </div>
         </div>
