fix - alterações textuais

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
                 <div class="card-news">
                     <div class="card-header">
-                        <h5 class="title-card">Baixe gratuitamente a nossa planilha de Estudos e organize melhor o seu tempo!</h5>
+                        <h5 class="title-card">Baixe gratuitamente o nosso Ciclo de Estudos e organize melhor o seu tempo!</h5>
                     </div>
                     <div class="card-body">
                         <form name="newsLateral" action="POST" data-netlify="true">
